<resources>
    <string name="app_name">FileExplore</string>
    <string name="choose_all">全选</string>
    <string name="cancel_choose">取消</string>
    <string name="copy_files">复制</string>
    <string name="delete_files">删除</string>
    <string name="paste_mkdir">新建文件夹</string>
    <string name="files_paste">粘贴</string>
    <string name="cancel_copy">取消</string>
    <string name="paste_mode_title_text_view">选择目标文件夹</string>
</resources>
